--- a/configs/cam18.yaml
+++ b/configs/cam18.yaml
@@ -2,6 +2,7 @@ CAM:
   NAME: "CAM_18"
   NUMBER_MOI: 2
   ROI_DEFAULT: [[131, 307], [605, 148], [941, 249], [885, 691]]
+  TRACKING_ROI: [[30, 307], [605, 80], [1000, 170],[885, 719], [700, 719]]
   # MOI1: [[549, 144], [297, 505]]
   # MOI2: [[925, 487], [715, 144]]
   LINE1: [[413, 242], [602, 325]]
