--- a/configs/cam18.yaml
+++ b/configs/cam18.yaml
@@ -10,3 +10,12 @@ CAM:
   # ROI_MOI: [[[130, 310], [425, 460], [333, 530], [2, 370]], [[750, 190], [780, 175], [950, 215], [940, 250]]]
   LINE1: [[207, 279], [462, 412]]
   LINE2: [[748, 214], [937, 278]]
+
+  # for kalman filter - kalman_filter.py
+  _STD_WEIGHT_POSITION: 30         # inverse of _std_weight_position
+  _STD_WEIGHT_VELOCITY: 10         # inverse of _std_weight_velocity
+
+  # config for tracker - tracker.py
+  MAX_IOU_DISTANCE: 0.85
+  MAX_AGE: 3
+  N_INIT: 1
