--- a/configs/cam11.yaml
+++ b/configs/cam11.yaml
@@ -7,3 +7,14 @@ CAM:
   # MOI2: [[925, 487], [715, 144]]
   LINE1: [[260, 570], [627, 563]]
   LINE2: [[600, 370], [800, 370]]
+  LINE: [[[260, 570], [627, 563]], [[600, 370], [800, 370]]]
+
+  
+  # for kalman filter - kalman_filter.py
+  _STD_WEIGHT_POSITION: 30         # inverse of _std_weight_position
+  _STD_WEIGHT_VELOCITY: 10         # inverse of _std_weight_velocity
+
+  # config for tracker - tracker.py
+  MAX_IOU_DISTANCE: 0.85
+  MAX_AGE: 3
+  N_INIT: 1
