--- a/configs/cam25.yaml
+++ b/configs/cam25.yaml
@@ -7,3 +7,13 @@ CAM:
     # MOI2: [[925, 487], [715, 144]]
     LINE1: [[324, 392], [635, 510]]
     LINE2: [[951, 347], [1146, 393]]
+    LINE: [[[324, 392], [635, 510]], [[951, 347], [1146, 393]]]
+
+    # for kalman filter - kalman_filter.py
+    _STD_WEIGHT_POSITION: 30         # inverse of _std_weight_position
+    _STD_WEIGHT_VELOCITY: 10         # inverse of _std_weight_velocity
+
+    # config for tracker - tracker.py
+    MAX_IOU_DISTANCE: 0.85
+    MAX_AGE: 3
+    N_INIT: 1
