--- a/configs/cam5.yaml
+++ b/configs/cam5.yaml
@@ -7,3 +7,13 @@ CAM:
     # MOI2: [[925, 487], [715, 144]]
     LINE1: [[320, 647], [1, 630]]
     LINE2: [[613, 216], [755, 215]]
+    LINE: [[[320, 647], [1, 630]], [[613, 216], [755, 215]]]
+
+    # for kalman filter - kalman_filter.py
+    _STD_WEIGHT_POSITION: 30         # inverse of _std_weight_position
+    _STD_WEIGHT_VELOCITY: 10         # inverse of _std_weight_velocity
+
+    # config for tracker - tracker.py
+    MAX_IOU_DISTANCE: 0.85
+    MAX_AGE: 3
+    N_INIT: 1
