--- a/configs/cam6.yaml
+++ b/configs/cam6.yaml
@@ -7,3 +7,13 @@ CAM:
   # MOI2: [[925, 487], [715, 144]]
   LINE1: [[27, 425], [626, 438]]
   LINE2: [[643, 182], [850, 181]]
+  LINE: [[[27, 425], [626, 438]], [[27, 425], [626, 438]]]
+
+  # for kalman filter - kalman_filter.py
+  _STD_WEIGHT_POSITION: 30         # inverse of _std_weight_position
+  _STD_WEIGHT_VELOCITY: 10         # inverse of _std_weight_velocity
+
+  # config for tracker - tracker.py
+  MAX_IOU_DISTANCE: 0.85
+  MAX_AGE: 3
+  N_INIT: 1
