--- a/configs/cam6.yaml
+++ b/configs/cam6.yaml
@@ -1,9 +1,17 @@
 CAM:
   NAME: "CAM_06"
   NUMBER_MOI: 2
-  ROI_DEFAULT: [[10, 437], [437, 150], [810, 150], [1223, 464]]
-  TRACKING_ROI: [[3, 435], [465, 117], [800, 117], [1277, 486], [1279, 646]], [2, 627]
+  ROI_DEFAULT: [[10, 437], [437, 150],[630,170], [826,163], [1223, 464]]
+  TRACKING_ROI: [[10, 437], [437, 150],[630,170],[633,133],[781,134], [810, 150], [1223, 464],[631,451],[625,551],[6,541]]
   # MOI1: [[549, 144], [297, 505]]
   # MOI2: [[925, 487], [715, 144]]
-  LINE1: [[27, 425], [626, 438]]
-  LINE2: [[643, 182], [850, 181]]
+  LINE1: [[202,310], [626, 324]]
+  LINE2: [[643, 209], [881, 206]]
+  # for kalman filter - kalman_filter.py
+  _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
+  _STD_WEIGHT_VELOCITY: 40        # inverse of _std_weight_velocity
+
+  # config for tracker - tracker.py
+  MAX_IOU_DISTANCE: 0.85
+  MAX_AGE: 3
+  N_INIT: 1
