--- a/configs/cam9.yaml
+++ b/configs/cam9.yaml
@@ -2,17 +2,17 @@ CAM:
   NAME: "CAM_09"
   NUMBER_MOI: 1
   ROI_DEFAULT: [[238, 454], [687, 286], [1156, 306], [1262, 621]]
-  TRACKING_ROI: [[115, 487], [721, 251], [1160, 278],[1279, 719]]
+  TRACKING_ROI: [[238, 454], [721, 251], [1160, 278],[1262, 621]]
   # MOI1: [[549, 144], [297, 505]]
   # MOI2: [[925, 487], [715, 144]]
-  LINE1: [[449, 348], [1217, 459]]
-  LINE: [[[449, 348], [1217, 459]]]
+  LINE1: [[637,303], [1170,346]]
+  LINE: [[[637,303], [1170,346]]]
 
   # for kalman filter - kalman_filter.py
-  _STD_WEIGHT_POSITION: 30         # inverse of _std_weight_position
-  _STD_WEIGHT_VELOCITY: 10         # inverse of _std_weight_velocity
+  _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
+  _STD_WEIGHT_VELOCITY: 100         # inverse of _std_weight_velocity
 
   # config for tracker - tracker.py
   MAX_IOU_DISTANCE: 0.85
-  MAX_AGE: 3
-  N_INIT: 1
+  MAX_AGE: 8
+  N_INIT: 2
