--- a/configs/cam11.yaml
+++ b/configs/cam11.yaml
@@ -2,8 +2,16 @@ CAM:
   NAME: "CAM_11"
   NUMBER_MOI: 2
   ROI_DEFAULT: [[250, 586], [430, 359], [800, 362], [982, 574]]
-  TRACKING_ROI: [[155, 685], [431, 328], [787, 322],[1095, 670]]
+  TRACKING_ROI: [[250, 586], [430, 359],[600,359],[595,329],[777,321], [800, 362], [982, 574],[630,579],[628,635],[218,656]]
   # MOI1: [[549, 144], [297, 505]]
   # MOI2: [[925, 487], [715, 144]]
-  LINE1: [[260, 570], [627, 563]]
-  LINE2: [[600, 370], [800, 370]]
+  LINE1: [[300,528], [596,526]]
+  LINE2: [[618,397], [822,395]]
+  LINE: [[[300,528], [596,526]], [[618,397], [822,395]]]
+  # for kalman filter - kalman_filter.py
+  _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
+  _STD_WEIGHT_VELOCITY: 100         # inverse of _std_weight_velocity
+  # config for tracker - tracker.py
+  MAX_IOU_DISTANCE: 0.85
+  MAX_AGE: 8
+  N_INIT: 2
