--- a/configs/cam13.yaml
+++ b/configs/cam13.yaml
@@ -2,8 +2,18 @@ CAM:
   NAME: "CAM_13"
   NUMBER_MOI: 2
   ROI_DEFAULT: [[8, 339], [341, 166], [1008, 169], [1272, 312]]
-  TRACKING_ROI: [[1, 321], [360, 130], [1008, 138],[1276, 298], [1277, 460], [1, 420]]
+  TRACKING_ROI: [[8, 339], [341, 166],[647,167],[647,141],[968,146], [1008, 169], [1272, 312],[641,328],[641,387],[109,401]]
   # MOI1: [[549, 144], [297, 505]]
   # MOI2: [[925, 487], [715, 144]]
-  LINE1: [[39, 323], [645, 315]]
-  LINE2: [[651, 178], [1023, 181]]
+  LINE1: [[120,285], [633,277]]
+  LINE2: [[655,205], [1044,191]]
+  LINE: [[[120,285], [633,277]], [[655,205], [1044,191]]]
+
+  # for kalman filter - kalman_filter.py
+  _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
+  _STD_WEIGHT_VELOCITY: 100         # inverse of _std_weight_velocity
+
+  # config for tracker - tracker.py
+  MAX_IOU_DISTANCE: 0.85
+  MAX_AGE: 8
+  N_INIT: 2
