--- a/configs/cam16.yaml
+++ b/configs/cam16.yaml
@@ -5,6 +5,16 @@ CAM:
   TRACKING_ROI: [[2, 165], [561, 108], [1278, 371],[1278, 580], [202, 719]]
   # MOI1: [[549, 144], [297, 505]]
   # MOI2: [[925, 487], [715, 144]]
-  LINE1: [[63, 335], [627, 287]]
+  LINE1: [[92,444], [614,358]]
   LINE2: [[494, 196], [565, 243]]
   LINE3: [[682, 249], [976, 400]]
+  LINE: [[[92,444], [614,358]],[[494, 196], [565, 243]],[[682, 249], [976, 400]]]
+  
+  # for kalman filter - kalman_filter.py
+  _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
+  _STD_WEIGHT_VELOCITY: 100         # inverse of _std_weight_velocity
+
+  # config for tracker - tracker.py
+  MAX_IOU_DISTANCE: 0.85
+  MAX_AGE: 8
+  N_INIT: 2
