--- a/configs/cam24.yaml
+++ b/configs/cam24.yaml
@@ -2,8 +2,18 @@ CAM:
     NAME: "CAM_24"
     NUMBER_MOI: 2
     ROI_DEFAULT: [[207, 418], [803, 283], [1153, 368], [1090, 690]]
-    TRACKING_ROI: [[38, 445], [835, 238], [1174, 319],[1160, 719], [861, 719]]
+    TRACKING_ROI: [[207, 418], [803, 283],[961,321],[1005,277],[1158,308], [1153, 368], [1090, 690],[583,536],[369,629],[55,482]]
     # MOI1: [[549, 144], [297, 505]]
     # MOI2: [[925, 487], [715, 144]]
-    LINE1: [[324, 392], [635, 510]]
-    LINE2: [[951, 347], [1146, 393]]
+    LINE1: [[402,371], [592,457]]
+    LINE2: [[876,344], [1140,417]]
+    LINE: [[[402,371], [592,457]],[[876,344], [1140,417]]]
+    
+    # for kalman filter - kalman_filter.py
+    _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
+    _STD_WEIGHT_VELOCITY: 100         # inverse of _std_weight_velocity
+  
+    # config for tracker - tracker.py
+    MAX_IOU_DISTANCE: 0.85
+    MAX_AGE: 8
+    N_INIT: 2
