--- a/configs/cam6.yaml
+++ b/configs/cam6.yaml
@@ -7,11 +7,11 @@ CAM:
   # MOI2: [[925, 487], [715, 144]]
   LINE1: [[202,310], [626, 324]]
   LINE2: [[643, 209], [881, 206]]
+  LINE: [[[202,310], [626, 324]], [[643, 209], [881, 206]]]
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
-  _STD_WEIGHT_VELOCITY: 40        # inverse of _std_weight_velocity
-
+  _STD_WEIGHT_VELOCITY: 100         # inverse of _std_weight_velocity
   # config for tracker - tracker.py
   MAX_IOU_DISTANCE: 0.85
-  MAX_AGE: 3
-  N_INIT: 1
+  MAX_AGE: 8
+  N_INIT: 2
