--- a/configs/cam8.yaml
+++ b/configs/cam8.yaml
@@ -7,3 +7,10 @@ CAM:
   # MOI2: [[925, 487], [715, 144]]
   LINE1: [[31, 422], [621, 429]]
   LINE2: [[639, 237], [989, 237]]
+  # for kalman filter - kalman_filter.py
+  _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
+  _STD_WEIGHT_VELOCITY: 100         # inverse of _std_weight_velocity
+  # config for tracker - tracker.py
+  MAX_IOU_DISTANCE: 0.85
+  MAX_AGE: 8
+  N_INIT: 2
