--- a/configs/cam7.yaml
+++ b/configs/cam7.yaml
@@ -1,6 +1,7 @@
 CAM:
   NAME: "CAM_07"
   NUMBER_MOI: 2
+  #ROI_DEFAULT: [[7,441], [390,150], [812,153], [1225, 465]]
   ROI_DEFAULT: [[19, 431], [322, 218], [968, 224], [1266, 448]]
   TRACKING_ROI: [[19, 431], [322, 218],[627,218],[640,170],[930,172], [968, 224], [1266, 448],[623,443],[616,510],[13,509]]
   # MOI1: [[549, 144], [297, 505]]
