--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,40 @@
+absl-py==0.9.0
+astor==0.8.1
+atomicwrites==1.3.0
+attrs==19.3.0
+certifi==2020.6.20
+colorama==0.4.3
+cycler==0.10.0
+easydict==1.9
+entrypoints==0.3
+et-xmlfile==1.0.1
+flake8==3.7.9
+flake8-import-order==0.18.1
+gast==0.3.3
+google-pasta==0.2.0
+grpcio==1.30.0
 h5py==2.10.0
+importlib-metadata==1.6.0
 imutils==0.5.3
+jdcal==1.4.1
+joblib==0.14.1
 Keras==2.3.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
+kiwisolver==1.2.0
+lxml==4.5.2
+Markdown==3.2.2
+matplotlib==3.3.1
+mccabe==0.6.1
 numpy==1.19.1
 opencv-python==4.3.0.36
 parse-utils==1.2
 Pillow==7.2.0
+protobuf==3.12.4
+pycodestyle==2.5.0
+pyflakes==2.1.1
+pyparsing==2.4.7
+python-dateutil==2.8.1
 PyYAML==5.3.1
 scikit-learn==0.22.2
 scipy==1.5.2
@@ -15,5 +43,10 @@ six==1.15.0
 tensorboard==1.14.0
 tensorflow==1.14.0
 tensorflow-estimator==1.14.0
-# torch @ https://download.pytorch.org/whl/cu100/torch-1.1.0-cp37-cp37m-win_amd64.whl
+termcolor==1.1.0
+threadpoolctl==2.1.0
+torch @ https://download.pytorch.org/whl/cu100/torch-1.1.0-cp37-cp37m-win_amd64.whl
 tqdm==4.48.2
+Werkzeug==1.0.1
+wrapt==1.12.1
+zipp==3.1.0
