--- a/configs/cam17.yaml
+++ b/configs/cam17.yaml
@@ -16,5 +16,6 @@ CAM:
 
   # config for tracker - tracker.py
   MAX_IOU_DISTANCE: 0.85
-  MAX_AGE: 8
-  N_INIT: 2
+  MAX_AGE: 3
+  N_INIT: 1
+  THRESHOLD_AREA: 0.5
