--- a/configs/cam1.yaml
+++ b/configs/cam1.yaml
@@ -1,9 +1,8 @@
 CAM:
   NAME: "CAM_01"
   NUMBER_MOI: 2
-  #ROI_DEFAULT: [[1,341], [150, 210],[963,249],[1278,464], [0,462]]
   ROI_DEFAULT: [[2,370], [150, 210],[847,244],[866,273], [963, 273], [1278, 464],[109,460], [166,396]]
-  TRACKING_ROI: [[2,370], [150, 210],[603,231],[610,200],[941,209], [963, 249], [1278, 464],[592,461],[596,567],[51,559],[3,407]]
+  TRACKING_ROI: [[2,370], [150, 210],[603,231],[610,200],[941,209], [963, 249], [1278, 464],[592,461],[611,627],[54,616],[3,407]]
   # MOI1: [[549, 144], [297, 505]]
   # MOI2: [[925, 487], [715, 144]]
   LINE1: [[25, 317], [577, 342]]
@@ -16,5 +15,6 @@ CAM:
 
   # config for tracker - tracker.py
   MAX_IOU_DISTANCE: 0.85
-  MAX_AGE: 8
-  N_INIT: 2
+  MAX_AGE: 3
+  N_INIT: 1
+  THRESHOLD_AREA: 0.3
