--- a/configs/cam11.yaml
+++ b/configs/cam11.yaml
@@ -2,16 +2,17 @@ CAM:
   NAME: "CAM_11"
   NUMBER_MOI: 2
   ROI_DEFAULT: [[250, 586], [430, 359], [800, 362], [982, 574]]
-  TRACKING_ROI: [[250, 586], [430, 359],[600,359],[595,329],[777,321], [800, 362], [982, 574],[630,579],[628,635],[218,656]]
+  TRACKING_ROI: [[250, 586], [430, 359],[600,359],[595,315],[777,310], [800, 362], [982, 574],[630,579],[628,720],[218,720]]
   # MOI1: [[549, 144], [297, 505]]
   # MOI2: [[925, 487], [715, 144]]
-  LINE1: [[300,528], [596,526]]
-  LINE2: [[618,397], [822,395]]
-  LINE: [[[300,528], [596,526]], [[618,397], [822,395]]]
+  LINE1: [[223,490], [610,489]]
+  LINE2: [[608,422], [844,414]]
+  LINE: [[[223,490], [610,489]],[[608,422], [844,414]]]
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
   _STD_WEIGHT_VELOCITY: 100         # inverse of _std_weight_velocity
   # config for tracker - tracker.py
   MAX_IOU_DISTANCE: 0.85
-  MAX_AGE: 8
-  N_INIT: 2
+  MAX_AGE: 3
+  N_INIT: 1
+  THRESHOLD_AREA: 0.25
