--- a/configs/cam14.yaml
+++ b/configs/cam14.yaml
@@ -2,7 +2,7 @@ CAM:
   NAME: "CAM_14"
   NUMBER_MOI: 6
   ROI_DEFAULT: [[11, 461], [306, 213], [950, 180], [1272, 417]]
-  TRACKING_ROI: [[3, 442], [313, 170], [991, 124],[1276, 333], [1277, 557], [1, 557]]
+  TRACKING_ROI: [[3, 442], [313, 170], [991, 124],[1276, 333], [1277, 557], [1, 720]]
   # MOI1: [[549, 144], [297, 505]]
   # MOI2: [[925, 487], [715, 144]]
   LINE1: [[70, 421], [552, 406]]
@@ -19,5 +19,6 @@ CAM:
 
   # config for tracker - tracker.py
   MAX_IOU_DISTANCE: 0.85
-  MAX_AGE: 8
-  N_INIT: 2
+  MAX_AGE: 3
+  N_INIT: 1
+  THRESHOLD_AREA: 0.2
