--- a/configs/cam16.yaml
+++ b/configs/cam16.yaml
@@ -2,10 +2,10 @@ CAM:
   NAME: "CAM_16"
   NUMBER_MOI: 3
   ROI_DEFAULT: [[46, 190], [521, 144], [1156, 454], [128, 636]]
-  TRACKING_ROI: [[2, 165], [561, 108], [1278, 371],[1278, 580], [202, 719]]
+  TRACKING_ROI: [[2, 165], [561, 108], [1278, 371],[1278, 720], [202, 719]]
   # MOI1: [[549, 144], [297, 505]]
   # MOI2: [[925, 487], [715, 144]]
-  LINE1: [[92,444], [614,358]]
+  LINE1: [[92,444], [630,348]]
   LINE2: [[494, 196], [565, 243]]
   LINE3: [[682, 249], [976, 400]]
   LINE: [[[92,444], [614,358]],[[494, 196], [565, 243]],[[682, 249], [976, 400]]]
@@ -16,5 +16,6 @@ CAM:
 
   # config for tracker - tracker.py
   MAX_IOU_DISTANCE: 0.85
-  MAX_AGE: 8
-  N_INIT: 2
+  MAX_AGE: 3
+  N_INIT: 1
+  THRESHOLD_AREA: 0.2
