--- a/configs/cam5.yaml
+++ b/configs/cam5.yaml
@@ -1,14 +1,14 @@
 CAM:
-    NAME: "CAM_05"
+    NAME: "CAM_04"
     NUMBER_MOI: 2
     #ROI_DEFAULT: [[1, 567], [484, 171], [756, 164], [910, 719], [0, 718]]
     ROI_DEFAULT: [[1, 567], [382,254], [782,246], [862,549]]
     TRACKING_ROI: [[1, 567], [382,254],[593,253],[617,211],[766,209], [782,246], [862,549],[448,555],[424,631],[3,634]]
     # MOI1: [[549, 144], [297, 505]]
     # MOI2: [[925, 487], [715, 144]]
-    LINE1: [[287,455], [402,627]]
+    LINE1: [[250,380], [402,627]]
     LINE2: [[557,364], [813,355]]
-    LINE: [[[287,455], [402,627]], [[557,364], [813,355]]]
+    LINE: [[[250,380], [402,627]], [[557,364], [813,355]]]
 
     
   # for kalman filter - kalman_filter.py
@@ -17,5 +17,6 @@ CAM:
 
     # config for tracker - tracker.py
     MAX_IOU_DISTANCE: 0.85
-    MAX_AGE: 8
-    N_INIT: 2
+    MAX_AGE: 3
+    N_INIT: 1
+    THRESHOLD_AREA: 0.25
