--- a/configs/cam6.yaml
+++ b/configs/cam6.yaml
@@ -1,6 +1,7 @@
 CAM:
   NAME: "CAM_06"
   NUMBER_MOI: 2
+  #ROI_DEFAULT:[[7,441],[439,150],]
   ROI_DEFAULT: [[10, 437], [437, 150],[630,170], [826,163], [1223, 464]]
   TRACKING_ROI: [[10, 437], [437, 150],[630,170],[633,133],[781,134], [810, 150], [1223, 464],[631,451],[625,551],[6,541]]
   # MOI1: [[549, 144], [297, 505]]
@@ -13,5 +14,6 @@ CAM:
   _STD_WEIGHT_VELOCITY: 100         # inverse of _std_weight_velocity
   # config for tracker - tracker.py
   MAX_IOU_DISTANCE: 0.85
-  MAX_AGE: 8
-  N_INIT: 2
+  MAX_AGE: 3
+  N_INIT: 1
+  THRESHOLD_AREA: 0.30
