--- a/configs/cam8.yaml
+++ b/configs/cam8.yaml
@@ -1,18 +1,17 @@
 CAM:
   NAME: "CAM_08"
   NUMBER_MOI: 2
-  #ROI_DEFAULT: [[7,441], [390,150], [812,153], [1225, 465]]
   ROI_DEFAULT: [[19, 431], [322, 218], [968, 224], [1266, 448]]
-  TRACKING_ROI: [[19, 431], [322, 218],[627,218],[640,170],[930,172], [968, 224], [1266, 448],[623,443],[616,510],[13,509]]
+  TRACKING_ROI: [[3, 429], [363, 164], [945, 164], [1279, 439], [1279, 579]], [2, 439]
   # MOI1: [[549, 144], [297, 505]]
   # MOI2: [[925, 487], [715, 144]]
-  LINE1: [[95,361], [600,380]]
-  LINE2: [[634,265], [1025,266]]
-  LINE: [[[95,361], [600,386]], [[634,265], [1025,266]]]
+  LINE1: [[31, 422], [621, 429]]
+  LINE2: [[639, 237], [989, 237]]
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
   _STD_WEIGHT_VELOCITY: 100         # inverse of _std_weight_velocity
   # config for tracker - tracker.py
   MAX_IOU_DISTANCE: 0.85
-  MAX_AGE: 8
-  N_INIT: 2
+  MAX_AGE: 3
+  N_INIT: 1
+  THRESHOLD_AREA: 0.35
