--- a/configs/cam13.yaml
+++ b/configs/cam13.yaml
@@ -2,12 +2,12 @@ CAM:
   NAME: "CAM_13"
   NUMBER_MOI: 2
   ROI_DEFAULT: [[8, 339], [341, 166], [1008, 169], [1272, 312]]
-  TRACKING_ROI: [[8, 339], [341, 166],[647,167],[647,141],[968,146], [1008, 169], [1272, 312],[641,328],[641,387],[109,401]]
+  TRACKING_ROI: [[8, 339], [341, 166],[647,167],[649,120],[963,123], [1008, 169], [1272, 312],[641,328],[632,485],[8,509]]
   # MOI1: [[549, 144], [297, 505]]
   # MOI2: [[925, 487], [715, 144]]
   LINE1: [[120,285], [633,277]]
-  LINE2: [[655,205], [1044,191]]
-  LINE: [[[120,285], [633,277]], [[655,205], [1044,191]]]
+  LINE2: [[648,223], [1075,203]]
+  LINE: [[[120,285], [633,277]], [[648,223], [1075,203]]]
 
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
@@ -17,3 +17,4 @@ CAM:
   MAX_IOU_DISTANCE: 0.85
   MAX_AGE: 3
   N_INIT: 1
+  THRESHOLD_AREA: 0.3
