--- a/configs/cam22.yaml
+++ b/configs/cam22.yaml
@@ -1,8 +1,9 @@
 CAM:
-  NAME: "CAM_22"
+  NAME: "CAM_21"
   NUMBER_MOI: 6
-  ROI_DEFAULT: [[6, 389], [440, 211], [814, 252], [830, 661]]
-  TRACKING_ROI: [[2, 242], [456, 150], [819, 189],[842, 716], [437, 716], [1, 553]]
+  #ROI_DEFAULT: [[6, 389], [440, 211], [814, 252], [830, 661]]
+  ROI_DEFAULT: [[6, 389], [440, 211], [814, 252], [830, 661],[185,450],[4,508]]
+  TRACKING_ROI: [[2, 242], [456, 150], [819, 189],[842, 716], [437, 716], [1, 720]]
   # MOI1: [[549, 144], [297, 505]]
   # MOI2: [[925, 487], [715, 144]]
   LINE1: [[107, 386], [315, 505]]
@@ -21,3 +22,4 @@ CAM:
   MAX_IOU_DISTANCE: 0.85
   MAX_AGE: 3
   N_INIT: 1
+  THRESHOLD_AREA: 0.4
