--- a/configs/cam24.yaml
+++ b/configs/cam24.yaml
@@ -5,9 +5,9 @@ CAM:
     TRACKING_ROI: [[207, 418], [803, 283],[961,321],[1005,277],[1158,308], [1153, 368], [1090, 690],[583,536],[369,629],[55,482]]
     # MOI1: [[549, 144], [297, 505]]
     # MOI2: [[925, 487], [715, 144]]
-    LINE1: [[402,371], [592,457]]
-    LINE2: [[876,344], [1140,417]]
-    LINE: [[[402,371], [592,457]],[[876,344], [1140,417]]]
+    LINE1: [[490,351], [700,431]]
+    LINE2: [[856,380], [1131,465]]
+    LINE: [[[490,351], [700,431]],[[856,380], [1131,465]]]
     
     # for kalman filter - kalman_filter.py
     _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
@@ -17,3 +17,4 @@ CAM:
     MAX_IOU_DISTANCE: 0.85
     MAX_AGE: 3
     N_INIT: 1
+    THRESHOLD_AREA: 0.3
