--- a/configs/cam10.yaml
+++ b/configs/cam10.yaml
@@ -3,8 +3,20 @@ CAM:
   NUMBER_MOI: 12
   ROI_DEFAULT: [[1, 657], [312, 258], [985, 255], [1277, 505], [1279, 660]]
   TRACKING_ROI: [[1, 715], [1, 501], [302, 202], [992, 207],[1278, 435], [1276, 715]]
-  # MOI1: [[549, 144], [297, 505]]
-  # MOI2: [[925, 487], [715, 144]]
+  MOI1: [[491, 244], [355, 678]]
+  MOI2: [[969, 674], [754, 236]]
+  MOI3: [[455, 238], [193, 325]]
+  MOI4: [[59, 532], [732, 241]]
+  MOI5: [[936, 675], [171, 349]]
+  MOI6: [[77, 499], [214, 697]]
+  MOI7: [[998, 679], [1178, 394]]
+  MOI8: [[55, 510], [1178, 388]]
+  MOI9: [[1147, 365], [775, 243]]
+  MOI10: [[533, 238], [1156, 381]]
+  MOI11: [[1164, 370], [179, 335]]
+  MOI12: [[1165, 397], [375, 693]]
+  MOI: [[[491, 244], [355, 678]], [[969, 674], [754, 236]], [[455, 238], [193, 325]], [[59, 532], [732, 241]], [[936, 675], [171, 349]], [[77, 499], [214, 697]], [[998, 679], [1178, 394]], [[55, 510], [1178, 388]], [[1147, 365], [775, 243]], [[533, 238], [1156, 381]], [[1164, 370], [179, 335]], [[1165, 397], [375, 693]]]
+  
   LINE1: [[185, 632], [549, 631]]
   LINE2: [[690, 267], [895, 266]]
   LINE3: [[293, 225], [353, 320]]
@@ -26,4 +38,4 @@ CAM:
   MAX_IOU_DISTANCE: 0.85
   MAX_AGE: 3
   N_INIT: 1
-  THRESHOLD_AREA: 0.4
+  #THRESHOLD_AREA: 0.4
