--- a/configs/cam11.yaml
+++ b/configs/cam11.yaml
@@ -3,8 +3,9 @@ CAM:
   NUMBER_MOI: 2
   ROI_DEFAULT: [[250, 586], [430, 359], [800, 362], [982, 574]]
   TRACKING_ROI: [[250, 586], [430, 359],[600,359],[595,315],[777,310], [800, 362], [982, 574],[630,579],[628,720],[218,720]]
-  # MOI1: [[549, 144], [297, 505]]
-  # MOI2: [[925, 487], [715, 144]]
+  MOI1: [[542, 349], [471, 622]]
+  MOI2: [[785, 620], [655, 341]]
+  MOI: [[[542, 349], [471, 622]], [[785, 620], [655, 341]]]
   LINE1: [[223,490], [610,489]]
   LINE2: [[608,422], [844,414]]
   LINE: [[[223,490], [610,489]],[[608,422], [844,414]]]
@@ -15,4 +16,4 @@ CAM:
   MAX_IOU_DISTANCE: 0.85
   MAX_AGE: 3
   N_INIT: 1
-  THRESHOLD_AREA: 0.25
+  #THRESHOLD_AREA: 0.25
