--- a/configs/cam13.yaml
+++ b/configs/cam13.yaml
@@ -3,8 +3,9 @@ CAM:
   NUMBER_MOI: 2
   ROI_DEFAULT: [[8, 339], [341, 166], [1008, 169], [1272, 312]]
   TRACKING_ROI: [[8, 339], [341, 166],[647,167],[649,120],[963,123], [1008, 169], [1272, 312],[641,328],[632,485],[8,509]]
-  # MOI1: [[549, 144], [297, 505]]
-  # MOI2: [[925, 487], [715, 144]]
+  MOI1: [[521, 152], [305, 371]]
+  MOI2: [[980, 342], [808, 157]]
+  MOI: [[[521, 152], [305, 371]], [[980, 342], [808, 157]]]
   LINE1: [[120,285], [633,277]]
   LINE2: [[648,223], [1075,203]]
   LINE: [[[120,285], [633,277]], [[648,223], [1075,203]]]
@@ -17,4 +18,4 @@ CAM:
   MAX_IOU_DISTANCE: 0.85
   MAX_AGE: 3
   N_INIT: 1
-  THRESHOLD_AREA: 0.3
+  #THRESHOLD_AREA: 0.3
