--- a/configs/cam19.yaml
+++ b/configs/cam19.yaml
@@ -3,11 +3,9 @@ CAM:
   NUMBER_MOI: 2
   ROI_DEFAULT: [[131, 307], [605, 148], [941, 249], [885, 691]]
   TRACKING_ROI: [[54, 344], [605, 148], [706,195], [810,167], [916,197], [941,249],[885,691],[414,451],[341,508]]
-  # MOI1: [[549, 144], [297, 505]]
-  # MOI2: [[925, 487], [715, 144]]
-  # ROI_MOI1: [[130, 310], [425, 460], [333, 530], [2, 370]]
-  # ROI_MOI2: [[750, 190], [780, 175], [950, 215], [940, 250]]
-  # ROI_MOI: [[[130, 310], [425, 460], [333, 530], [2, 370]], [[750, 190], [780, 175], [950, 215], [940, 250]]]
+  MOI1: [[731,168],[205,424]]
+  MOI2: [[526,566],[842,199]]
+  MOI: [[[731,168],[205,424]],[[526,566],[842,199]]]
   LINE1: [[207, 279], [462, 412]]
   LINE2: [[748, 214], [937, 278]]
   LINE: [[[207, 279], [462, 412]], [[748, 214], [937, 278]]]
@@ -20,4 +18,4 @@ CAM:
   MAX_IOU_DISTANCE: 0.85
   MAX_AGE: 3
   N_INIT: 1
-  THRESHOLD_AREA: 0.4
+  #THRESHOLD_AREA: 0.4
