--- a/configs/cam20.yaml
+++ b/configs/cam20.yaml
@@ -3,15 +3,22 @@ CAM:
   NUMBER_MOI: 6
   ROI_DEFAULT: [[73, 212], [760, 145], [1240, 293], [533, 686]]
   TRACKING_ROI: [[3, 116], [761, 107], [1273, 240],[1276, 393], [825, 716], [319, 716], [4, 344]]
-  # MOI1: [[549, 144], [297, 505]]
-  # MOI2: [[925, 487], [715, 144]]
+  MOI1: [[336  ,173],[1149 ,515 ]]
+  MOI2: [[1230 ,380],[498 ,147  ]]
+  MOI3: [[1226 ,396],[51,384  ]]
+  MOI4: [[356,170],[62,405]]
+  MOI5: [[121,424],[485,151]]
+  MOI6: [[127,438],[1184,448]]
+  MOI: [[[336  ,173],[1149 ,515 ]],[[1230 ,380],[498 ,147  ]],[[1226 ,396],[51,384  ]],[[356,170],[62,405]],[[121,424],[485,151]],,[[127,438],[1184,448]]]
+
+
   LINE1: [[568, 310], [699, 232]]
   LINE2: [[602, 197], [730, 147]]
   LINE3: [[637, 426], [623, 305]]
-  LINE4: [[124, 234], [213, 322]]
+  LINE4: [[124, 208], [325,300]]
   LINE5: [[320, 297], [540, 302]]
   LINE6: [[578, 416], [555, 675]]
-  LINE: [[[568, 310], [699, 232]], [[602, 197], [730, 147]], [[637, 426], [623, 305]], [[124, 234], [213, 322]], [[320, 297], [540, 302]], [[578, 416], [555, 675]]]
+  LINE: [[[568, 310], [699, 232]], [[602, 197], [730, 147]], [[637, 426], [623, 305]], [[124, 208], [325,300]], [[320, 297], [540, 302]], [[578, 416], [555, 675]]]
 
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
@@ -21,4 +28,4 @@ CAM:
   MAX_IOU_DISTANCE: 0.85
   MAX_AGE: 3
   N_INIT: 1
-  THRESHOLD_AREA: 0.35
+  #THRESHOLD_AREA: 0.35
