--- a/configs/cam6.yaml
+++ b/configs/cam6.yaml
@@ -3,9 +3,10 @@ CAM:
   NUMBER_MOI: 2
   #ROI_DEFAULT:[[7,441],[439,150],]
   ROI_DEFAULT: [[10, 437], [437, 150],[630,170], [826,163], [1223, 464]]
-  TRACKING_ROI: [[10, 437], [437, 150],[630,170],[633,133],[781,134], [810, 150], [1223, 464],[631,451],[625,551],[6,541]]
-  # MOI1: [[549, 144], [297, 505]]
-  # MOI2: [[925, 487], [715, 144]]
+  TRACKING_ROI: [[10, 437], [437, 150],[630,170],[633,133],[781,134], [810, 150], [1223, 464],[631,451],[625,720],[6,720]]
+  MOI1: [[549, 144], [297, 505]]
+  MOI2: [[925, 487], [715, 144]]
+  MOI: [[[549, 144], [297, 505]], [[925, 487], [715, 144]]]
   LINE1: [[202,310], [626, 324]]
   LINE2: [[643, 209], [881, 206]]
   LINE: [[[202,310], [626, 324]], [[643, 209], [881, 206]]]
@@ -16,4 +17,4 @@ CAM:
   MAX_IOU_DISTANCE: 0.85
   MAX_AGE: 3
   N_INIT: 1
-  THRESHOLD_AREA: 0.30
+  #THRESHOLD_AREA: 0.30
