--- a/configs/cam9.yaml
+++ b/configs/cam9.yaml
@@ -3,8 +3,8 @@ CAM:
   NUMBER_MOI: 1
   ROI_DEFAULT: [[238, 454], [687, 286], [1156, 306], [1262, 621]]
   TRACKING_ROI: [[238, 454], [721, 251], [1160, 278],[1262, 621]]
-  # MOI1: [[549, 144], [297, 505]]
-  # MOI2: [[925, 487], [715, 144]]
+  MOI1: [[655, 575], [943, 274]]
+  MOI: [[[655, 575], [943, 274]]]
   LINE1: [[637,303], [1170,346]]
   LINE: [[[637,303], [1170,346]]]
 
@@ -15,4 +15,4 @@ CAM:
   MAX_IOU_DISTANCE: 0.85
   MAX_AGE: 3
   N_INIT: 1
-  THRESHOLD_AREA: 0.25
+  #THRESHOLD_AREA: 0.25
