--- a/configs/yolov3.yaml
+++ b/configs/yolov3.yaml
@@ -1,4 +1,4 @@
 YOLOV3:
   CFG: "configs/yolov3.cfg"
-  WEIGHTS: "models/yolov3_Hieu_13000_0.65.weights"
+  WEIGHTS: "models/yolov0.weights"
   CLASS_NAMES: "data/traffic.names"
