--- a/configs/cam12.yaml
+++ b/configs/cam12.yaml
@@ -3,10 +3,10 @@ CAM:
   NUMBER_MOI: 1
   ROI_DEFAULT: [[134, 596], [650, 355], [1211, 431], [1199, 719]]
   TRACKING_ROI: [[134, 596], [652, 302], [1215, 379],[1199, 719]]
-  # MOI1: [[549, 144], [297, 505]]
-  # MOI2: [[925, 487], [715, 144]]
-  LINE1: [[512,417], [1200, 528]]
-  LINE: [[[512,417], [1200, 528]]]
+  MOI1: [[615, 706], [850, 368]]
+  MOI: [[[615, 706], [850, 368]]]
+  LINE1: [[607,375], [1200, 460]]
+  LINE: [[[607,375], [1200, 460]]]
   
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
@@ -16,4 +16,4 @@ CAM:
   MAX_IOU_DISTANCE: 0.85
   MAX_AGE: 3
   N_INIT: 1
-  THRESHOLD_AREA: 0.45
+  #THRESHOLD_AREA: 0.45
