--- a/configs/cam15.yaml
+++ b/configs/cam15.yaml
@@ -2,9 +2,15 @@ CAM:
   NAME: "CAM_15"
   NUMBER_MOI: 6
   ROI_DEFAULT: [[11, 461], [306, 213], [950, 180], [1272, 417]]
-  TRACKING_ROI: [[3, 442], [313, 170], [991, 124],[1276, 333], [1277, 557], [1, 557]]
-  # MOI1: [[549, 144], [297, 505]]
-  # MOI2: [[925, 487], [715, 144]]
+  TRACKING_ROI: [[3, 442], [313, 170], [991, 124],[1276, 333], [1277, 557], [1, 720]]
+  MOI1: [[424, 201], [274, 485]]
+  MOI2: [[827, 508], [628, 178]]
+  MOI3: [[1175, 247], [644, 175]]
+  MOI4: [[1175, 254], [205, 519]]
+  MOI5: [[1101, 554], [1179, 277]]
+  MOI6: [[414, 195], [1165, 266]]
+  MOI: [[[424, 201], [274, 485]], [[827, 508], [628, 178]], [[1175, 247], [644, 175]], [[1175, 254], [205, 519]], [[1101, 554], [1179, 277]], [[414, 195], [1165, 266]]]
+  
   LINE1: [[70, 421], [552, 406]]
   LINE2: [[555, 317], [932, 285]]
   LINE3: [[906, 185], [871, 250]]
@@ -21,4 +27,4 @@ CAM:
   MAX_IOU_DISTANCE: 0.85
   MAX_AGE: 3
   N_INIT: 1
-  THRESHOLD_AREA: 0.35
+  #THRESHOLD_AREA: 0.35
