--- a/configs/cam16.yaml
+++ b/configs/cam16.yaml
@@ -3,12 +3,14 @@ CAM:
   NUMBER_MOI: 3
   ROI_DEFAULT: [[46, 190], [521, 144], [1156, 454], [128, 636]]
   TRACKING_ROI: [[2, 165], [561, 108], [1278, 371],[1278, 720], [202, 719]]
-  # MOI1: [[549, 144], [297, 505]]
-  # MOI2: [[925, 487], [715, 144]]
+  MOI1: [[155,166],[596,621]]
+  MOI2: [[221,162],[679,209]]
+  MOI3: [[910,287],[878,619]]
+  MOI: [[[155,166],[596,621]],[[221,162],[679,209]],[[910,287],[878,619]]]
   LINE1: [[92,444], [630,348]]
-  LINE2: [[494, 196], [565, 243]]
+  LINE2: [[381,158], [370,216]]
   LINE3: [[682, 249], [976, 400]]
-  LINE: [[[92,444], [614,358]],[[494, 196], [565, 243]],[[682, 249], [976, 400]]]
+  LINE: [[[92,444], [614,358]],[[381,158], [370,216]],[[682, 249], [976, 400]]]
   
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
@@ -18,4 +20,4 @@ CAM:
   MAX_IOU_DISTANCE: 0.85
   MAX_AGE: 3
   N_INIT: 1
-  THRESHOLD_AREA: 0.35
+  #THRESHOLD_AREA: 0.35
