--- a/configs/cam22.yaml
+++ b/configs/cam22.yaml
@@ -1,18 +1,25 @@
 CAM:
-  NAME: "CAM_21"
+  NAME: "CAM_22"
   NUMBER_MOI: 6
   #ROI_DEFAULT: [[6, 389], [440, 211], [814, 252], [830, 661]]
   ROI_DEFAULT: [[6, 389], [440, 211], [814, 252], [830, 661],[185,450],[4,508]]
   TRACKING_ROI: [[2, 242], [456, 150], [819, 189],[842, 716], [437, 716], [1, 720]]
-  # MOI1: [[549, 144], [297, 505]]
-  # MOI2: [[925, 487], [715, 144]]
-  LINE1: [[107, 386], [315, 505]]
-  LINE2: [[615, 257], [775, 297]]
-  LINE3: [[284, 244], [300, 294]]
+  MOI1: [[602,204],[159,497]]
+  MOI2: [[526,591 ],[719 ,214 ]]
+  MOI3: [[567 ,207 ],[25 ,338 ]]
+  MOI4: [[33 ,337 ],[722, 231 ]]
+  MOI5: [[62, 320 ],[68,494  ]]
+  MOI6: [[484 ,591 ],[66 ,322 ]]
+  MOI: [[[602,204],[159,497]], [[526,591 ],[719 ,214 ]],[[567 ,207 ],[25 ,338 ]],[[33 ,337 ],[722, 231 ]],[[62, 320 ],[68,494  ]],[[484 ,591 ],[66 ,322 ]]]
+
+ 
+  LINE1: [[95,363], [291,477]]
+  LINE2: [[598,272], [823,334]]
+  LINE3: [[386,231], [357,300]]
   LINE4: [[621, 228], [510, 342]]
   LINE5: [[12, 417], [118, 417]]
   LINE6: [[448, 393], [280, 609]]
-  LINE: [[[107, 386], [315, 505]], [[615, 257], [775, 297]], [[284, 244], [300, 294]], [[621, 228], [510, 342]], [[12, 417], [118, 417]], [[448, 393], [280, 609]]]
+  LINE: [[[95,363], [291,477]], [[598,272], [823,334]], [[386,231], [357,300]], [[621, 228], [510, 342]], [[12, 417], [118, 417]], [[448, 393], [280, 609]]]
 
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
@@ -22,4 +29,4 @@ CAM:
   MAX_IOU_DISTANCE: 0.85
   MAX_AGE: 3
   N_INIT: 1
-  THRESHOLD_AREA: 0.4
+  #THRESHOLD_AREA: 0.4
