--- a/configs/cam24.yaml
+++ b/configs/cam24.yaml
@@ -3,8 +3,9 @@ CAM:
     NUMBER_MOI: 2
     ROI_DEFAULT: [[207, 418], [803, 283], [1153, 368], [1090, 690]]
     TRACKING_ROI: [[207, 418], [803, 283],[961,321],[1005,277],[1158,308], [1153, 368], [1090, 690],[583,536],[369,629],[55,482]]
-    # MOI1: [[549, 144], [297, 505]]
-    # MOI2: [[925, 487], [715, 144]]
+    MOI1: [[922, 309], [309, 503]]
+    MOI2: [[813,  628], [1057, 330]]
+    MOI: [[[922, 309], [309, 503]],[[813,  628], [1057, 330]] ]
     LINE1: [[490,351], [700,431]]
     LINE2: [[856,380], [1131,465]]
     LINE: [[[490,351], [700,431]],[[856,380], [1131,465]]]
@@ -17,4 +18,4 @@ CAM:
     MAX_IOU_DISTANCE: 0.85
     MAX_AGE: 3
     N_INIT: 1
-    THRESHOLD_AREA: 0.3
+    #THRESHOLD_AREA: 0.3
