--- a/configs/cam3.yaml
+++ b/configs/cam3.yaml
@@ -3,8 +3,9 @@ CAM:
   NUMBER_MOI: 2
   ROI_DEFAULT: [[2,370], [150, 210],[847,244],[866,273], [963, 273], [1278, 464],[109,460], [166,396]]
   TRACKING_ROI: [[2,370], [150, 210],[603,231],[610,200],[941,209], [963, 249], [1278, 464],[592,461],[611,627],[54,616],[3,407]]
-  # MOI1: [[549, 144], [297, 505]]
-  # MOI2: [[925, 487], [715, 144]]
+  MOI1: [[347, 210], [196, 548]]
+  MOI2: [[850, 512], [736, 220]]
+  MOI: [[[347, 210], [196, 548]], [[850, 512], [736, 220]]]
   LINE1: [[25, 317], [577, 342]]
   LINE2: [[620, 300], [1025, 310]]
   LINE: [[[25, 317], [577, 342]], [[620, 300], [1025, 310]]]
@@ -17,4 +18,4 @@ CAM:
   MAX_IOU_DISTANCE: 0.85
   MAX_AGE: 3
   N_INIT: 1
-  THRESHOLD_AREA: 0.3
+  #THRESHOLD_AREA: 0.3
