--- a/configs/cam5.yaml
+++ b/configs/cam5.yaml
@@ -1,14 +1,15 @@
 CAM:
-    NAME: "CAM_04"
+    NAME: "CAM_05"
     NUMBER_MOI: 2
     #ROI_DEFAULT: [[1, 567], [484, 171], [756, 164], [910, 719], [0, 718]]
     ROI_DEFAULT: [[1, 567], [382,254], [782,246], [862,549]]
-    TRACKING_ROI: [[1, 567], [382,254],[593,253],[617,211],[766,209], [782,246], [862,549],[448,555],[424,631],[3,634]]
-    # MOI1: [[549, 144], [297, 505]]
-    # MOI2: [[925, 487], [715, 144]]
-    LINE1: [[250,380], [402,627]]
+    TRACKING_ROI: [[1, 567], [382,254],[593,253],[617,160],[766,160], [782,246], [862,549],[448,555],[424,720],[3,720]]
+    MOI1: [[587,160], [286, 716]]
+    MOI2: [[609, 716], [663, 159]]
+    MOI: [[[587,160], [286, 716]], [[609, 716], [663, 159]]]
+    LINE1: [[171,427], [506,436]]
     LINE2: [[557,364], [813,355]]
-    LINE: [[[250,380], [402,627]], [[557,364], [813,355]]]
+    LINE: [[[171,427], [506,436]], [[557,364], [813,355]]]
 
     
   # for kalman filter - kalman_filter.py
@@ -19,4 +20,4 @@ CAM:
     MAX_IOU_DISTANCE: 0.85
     MAX_AGE: 3
     N_INIT: 1
-    THRESHOLD_AREA: 0.25
+    #THRESHOLD_AREA: 0.25
