--- a/configs/cam8.yaml
+++ b/configs/cam8.yaml
@@ -3,8 +3,9 @@ CAM:
   NUMBER_MOI: 2
   ROI_DEFAULT: [[19, 431], [322, 218], [968, 224], [1266, 448]]
   TRACKING_ROI: [[19, 431], [322, 218],[627,218],[640,170],[930,172], [968, 224], [1266, 448],[623,443],[615,570],[7,560]]
-  # MOI1: [[549, 144], [297, 505]]
-  # MOI2: [[925, 487], [715, 144]]
+  MOI1: [[491, 197], [308, 478]]
+  MOI2: [[961, 480], [784, 204]]
+  MOI: [[[491, 197], [308, 478]], [[961, 480], [784, 204]]]
   LINE1: [[95,361], [600,380]]
   LINE2: [[634,265], [1025,266]]
   LINE: [[[95,361], [600,386]], [[634,265], [1025,266]]]
@@ -15,4 +16,4 @@ CAM:
   MAX_IOU_DISTANCE: 0.85
   MAX_AGE: 3
   N_INIT: 1
-  THRESHOLD_AREA: 0.35
+  #THRESHOLD_AREA: 0.35
