--- a/configs/cam1.yaml
+++ b/configs/cam1.yaml
@@ -1,14 +1,16 @@
 CAM:
   NAME: "CAM_01"
   NUMBER_MOI: 2
-  ROI_DEFAULT: [[2,370], [150, 210],[847,244],[866,273], [963, 273], [1278, 464],[109,460], [166,396]]
-  TRACKING_ROI: [[2,370], [150, 210],[603,231],[610,200],[941,209], [963, 249], [1278, 464],[592,461],[611,627],[54,616],[3,407]]
+  #ROI_DEFAULT: [[1,341], [150, 210],[963,249],[1278,464], [0,462]]
+  ROI_DEFAULT: [[1,341], [150, 210],[604,229],[609,235],[999,269],[1278,464],[604,461],[607,416], [0,405]]
+  TRACKING_ROI: [[2,370], [150, 210],[603,231],[610,200],[941,209], [963, 249], [1278, 464],[592,461],[611,720],[2,720]]
   MOI1: [[347, 210], [196, 548]]
   MOI2: [[850, 512], [736, 220]]
   MOI: [[[347, 210], [196, 548]], [[850, 512], [736, 220]]]
-  LINE1: [[25, 317], [577, 342]]
-  LINE2: [[620, 300], [1025, 310]]
-  LINE: [[[25, 317], [577, 342]], [[620, 300], [1025, 310]]]
+
+  LINE1: [[0,369], [605,382]]
+  LINE2: [[607,300], [1064,314]]
+  LINE: [[[0,369], [605,382]], [[607,300], [1064,314]]]  
 
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
@@ -18,4 +20,8 @@ CAM:
   MAX_IOU_DISTANCE: 0.85
   MAX_AGE: 3
   N_INIT: 1
-  #THRESHOLD_AREA: 0.3
+  THRESHOLD_AREA: 0.3
+  # MOI1 +1 MOI2 +2
+  FRAME_MOI1: 1
+  FRAME_MOI2: 2
+  FRAME_MOI: [1,2]
