--- a/configs/cam10.yaml
+++ b/configs/cam10.yaml
@@ -16,7 +16,7 @@ CAM:
   MOI11: [[1164, 370], [179, 335]]
   MOI12: [[1165, 397], [375, 693]]
   MOI: [[[491, 244], [355, 678]], [[969, 674], [754, 236]], [[455, 238], [193, 325]], [[59, 532], [732, 241]], [[936, 675], [171, 349]], [[77, 499], [214, 697]], [[998, 679], [1178, 394]], [[55, 510], [1178, 388]], [[1147, 365], [775, 243]], [[533, 238], [1156, 381]], [[1164, 370], [179, 335]], [[1165, 397], [375, 693]]]
-  
+
   LINE1: [[185, 632], [549, 631]]
   LINE2: [[690, 267], [895, 266]]
   LINE3: [[293, 225], [353, 320]]
@@ -38,4 +38,17 @@ CAM:
   MAX_IOU_DISTANCE: 0.85
   MAX_AGE: 3
   N_INIT: 1
-  #THRESHOLD_AREA: 0.4
+  THRESHOLD_AREA: 0.4
+  FRAME_MOI1: 0
+  FRAME_MOI2 : 0
+  FRAME_MOI3 : 0
+  FRAME_MOI4 : 0
+  FRAME_MOI5 : 0
+  FRAME_MOI6 : 0
+  FRAME_MOI7 : 0
+  FRAME_MOI8 : 0 
+  FRAME_MOI9 : 0
+  FRAME_MOI10 : 0
+  FRAME_MOI11 : 0
+  FRAME_MOI12 : 0 
+  FRAME_MOI : [0,0,0,0,0,0,0,0,0,0,0,0]
