--- a/configs/cam11.yaml
+++ b/configs/cam11.yaml
@@ -1,14 +1,16 @@
 CAM:
   NAME: "CAM_11"
   NUMBER_MOI: 2
-  ROI_DEFAULT: [[250, 586], [430, 359], [800, 362], [982, 574]]
-  TRACKING_ROI: [[250, 586], [430, 359],[600,359],[595,315],[777,310], [800, 362], [982, 574],[630,579],[628,720],[218,720]]
+  #ROI_DEFAULT: [[250, 586], [430, 359], [800, 362], [982, 574]]
+  ROI_DEFAULT: [[278,550], [430, 359], [800, 362],[947,532]]
+  TRACKING_ROI: [[250, 586], [430, 359],[600,359],[595,315],[777,310], [800, 362], [982, 574],[814,571],[825,716],[218,720]]
   MOI1: [[542, 349], [471, 622]]
   MOI2: [[785, 620], [655, 341]]
   MOI: [[[542, 349], [471, 622]], [[785, 620], [655, 341]]]
-  LINE1: [[223,490], [610,489]]
-  LINE2: [[608,422], [844,414]]
-  LINE: [[[223,490], [610,489]],[[608,422], [844,414]]]
+
+  LINE1: [[334,488], [620,482]]
+  LINE2: [[634,412], [844,414]]
+  LINE: [[[334,488], [620,482]],[[634,412], [844,414]]]
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
   _STD_WEIGHT_VELOCITY: 100         # inverse of _std_weight_velocity
@@ -16,4 +18,8 @@ CAM:
   MAX_IOU_DISTANCE: 0.85
   MAX_AGE: 3
   N_INIT: 1
-  #THRESHOLD_AREA: 0.25
+  THRESHOLD_AREA: 0.25
+  #MOI1 +3
+  FRAME_MOI1: 3
+  FRAME_MOI2: 0
+  FRAME_MOI: [3,0]
