--- a/configs/cam13.yaml
+++ b/configs/cam13.yaml
@@ -6,6 +6,7 @@ CAM:
   MOI1: [[521, 152], [305, 371]]
   MOI2: [[980, 342], [808, 157]]
   MOI: [[[521, 152], [305, 371]], [[980, 342], [808, 157]]]
+
   LINE1: [[120,285], [633,277]]
   LINE2: [[648,223], [1075,203]]
   LINE: [[[120,285], [633,277]], [[648,223], [1075,203]]]
@@ -18,4 +19,7 @@ CAM:
   MAX_IOU_DISTANCE: 0.85
   MAX_AGE: 3
   N_INIT: 1
-  #THRESHOLD_AREA: 0.3
+  THRESHOLD_AREA: 0.3
+  FRAME_MOI1: 0
+  FRAME_MOI2: 0
+  FRAME_MOI: [0,0]
