--- a/configs/cam20.yaml
+++ b/configs/cam20.yaml
@@ -9,8 +9,7 @@ CAM:
   MOI4: [[356,170],[62,405]]
   MOI5: [[121,424],[485,151]]
   MOI6: [[127,438],[1184,448]]
-  MOI: [[[336  ,173],[1149 ,515 ]],[[1230 ,380],[498 ,147  ]],[[1226 ,396],[51,384  ]],[[356,170],[62,405]],[[121,424],[485,151]],,[[127,438],[1184,448]]]
-
+  MOI: [[[336  ,173],[1149 ,515 ]],[[1230 ,380],[498 ,147  ]],[[1226 ,396],[51,384  ]],[[356,170],[62,405]],[[121,424],[485,151]],[[127,438],[1184,448]]]
 
   LINE1: [[568, 310], [699, 232]]
   LINE2: [[602, 197], [730, 147]]
@@ -28,8 +27,11 @@ CAM:
   MAX_IOU_DISTANCE: 0.85
   MAX_AGE: 3
   N_INIT: 1
-<<<<<<< HEAD
-  #THRESHOLD_AREA: 0.35
-=======
-  THRESHOLD_AREA: 0.2
->>>>>>> master
+  THRESHOLD_AREA: 0.35
+  FRAME_MOI1: 0 
+  FRAME_MOI2: 0
+  FRAME_MOI3: 0
+  FRAME_MOI4: 0
+  FRAME_MOI5: 0
+  FRAME_MOI6: 0
+  FRAME_MOI: [0,0,0,0,0,0]
