--- a/configs/cam21.yaml
+++ b/configs/cam21.yaml
@@ -28,4 +28,11 @@ CAM:
   MAX_IOU_DISTANCE: 0.85
   MAX_AGE: 3
   N_INIT: 1
-  #THRESHOLD_AREA: 0.4
+  THRESHOLD_AREA: 0.4
+  FRAME_MOI1: 0 
+  FRAME_MOI2: 0
+  FRAME_MOI3: 0
+  FRAME_MOI4: 0
+  FRAME_MOI5: 0
+  FRAME_MOI6: 0
+  FRAME_MOI: [0,0,0,0,0,0]
