--- a/configs/cam24.yaml
+++ b/configs/cam24.yaml
@@ -1,14 +1,16 @@
 CAM:
     NAME: "CAM_24"
     NUMBER_MOI: 2
-    ROI_DEFAULT: [[207, 418], [803, 283], [1153, 368], [1090, 690]]
-    TRACKING_ROI: [[207, 418], [803, 283],[961,321],[1005,277],[1158,308], [1153, 368], [1090, 690],[583,536],[369,629],[55,482]]
+    #ROI_DEFAULT: [[207, 418], [803, 283], [1153, 368], [1090, 690]]
+    ROI_DEFAULT: [[207, 418], [744,296], [1147, 400], [1090, 690]]
+    TRACKING_ROI: [[207, 418], [803, 283],[961,321],[1005,277],[1158,308], [1153, 368], [1090, 690],[583,536],[250,720],[0,720],[2,492]]
     MOI1: [[922, 309], [309, 503]]
     MOI2: [[813,  628], [1057, 330]]
     MOI: [[[922, 309], [309, 503]],[[813,  628], [1057, 330]] ]
-    LINE1: [[490,351], [700,431]]
-    LINE2: [[856,380], [1131,465]]
-    LINE: [[[490,351], [700,431]],[[856,380], [1131,465]]]
+
+    LINE1: [[490,351], [701,444]]
+    LINE2: [[829,390], [1131,465]]
+    LINE: [[[490,351], [701,444]],[[829,390], [1131,465]]]
     
     # for kalman filter - kalman_filter.py
     _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
@@ -18,4 +20,8 @@ CAM:
     MAX_IOU_DISTANCE: 0.85
     MAX_AGE: 3
     N_INIT: 1
-    #THRESHOLD_AREA: 0.3
+    THRESHOLD_AREA: 0.3
+    #MOI2 +4
+    FRAME_MOI1: 0
+    FRAME_MOI2: 4
+    FRAME_MOI: [0,4]
