--- a/configs/cam8.yaml
+++ b/configs/cam8.yaml
@@ -1,14 +1,16 @@
 CAM:
   NAME: "CAM_08"
   NUMBER_MOI: 2
-  ROI_DEFAULT: [[19, 431], [322, 218], [968, 224], [1266, 448]]
-  TRACKING_ROI: [[19, 431], [322, 218],[627,218],[640,170],[930,172], [968, 224], [1266, 448],[623,443],[615,570],[7,560]]
+
+  ROI_DEFAULT: [[83,390], [322, 218], [968, 224], [1266, 448],[609,445],[612,392]]
+  TRACKING_ROI: [[19, 431], [322, 218],[627,218],[640,150],[930,152], [968, 224], [1266, 448],[623,443],[615,720],[7,720]]
   MOI1: [[491, 197], [308, 478]]
   MOI2: [[961, 480], [784, 204]]
   MOI: [[[491, 197], [308, 478]], [[961, 480], [784, 204]]]
-  LINE1: [[95,361], [600,380]]
+
+  LINE1: [[175,318], [620,330]]
   LINE2: [[634,265], [1025,266]]
-  LINE: [[[95,361], [600,386]], [[634,265], [1025,266]]]
+  LINE: [[[175,318], [620,330]], [[634,265], [1025,266]]]
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
   _STD_WEIGHT_VELOCITY: 100         # inverse of _std_weight_velocity
@@ -16,4 +18,8 @@ CAM:
   MAX_IOU_DISTANCE: 0.85
   MAX_AGE: 3
   N_INIT: 1
-  #THRESHOLD_AREA: 0.35
+  THRESHOLD_AREA: 0.20
+  #MOI1 +2
+  FRAME_MOI1: 2
+  FRAME_MOI2: 0
+  FRAME_MOI: [2,0]
