--- a/configs/cam12.yaml
+++ b/configs/cam12.yaml
@@ -1,12 +1,13 @@
 CAM:
   NAME: "CAM_12"
   NUMBER_MOI: 1
-  ROI_DEFAULT: [[134, 596], [650, 355], [1211, 431], [1199, 719]]
+  #ROI_DEFAULT: [[134, 596], [650, 355], [1211, 431], [1199, 719]
+  ROI_DEFAULT: [[134, 596], [586,362], [1200, 451], [1199, 719]]
   TRACKING_ROI: [[134, 596], [652, 302], [1215, 379],[1199, 719]]
   MOI1: [[615, 706], [850, 368]]
   MOI: [[[615, 706], [850, 368]]]
-  LINE1: [[607,375], [1200, 460]]
-  LINE: [[[607,375], [1200, 460]]]
+  LINE1: [[550,380], [1200, 479]]
+  LINE: [[[550,380], [1200, 479]]]
   
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
@@ -16,4 +17,7 @@ CAM:
   MAX_IOU_DISTANCE: 0.85
   MAX_AGE: 3
   N_INIT: 1
-  #THRESHOLD_AREA: 0.45
+  THRESHOLD_AREA: 0.35
+  #MOI1 +4\
+  FRAME_MOI1: 4
+  FRAME_MOI: [4]
