--- a/configs/cam19.yaml
+++ b/configs/cam19.yaml
@@ -1,14 +1,17 @@
 CAM:
   NAME: "CAM_19"
   NUMBER_MOI: 2
-  ROI_DEFAULT: [[131, 307], [605, 148], [941, 249], [885, 691]]
-  TRACKING_ROI: [[54, 344], [605, 148], [706,195], [810,167], [916,197], [941,249],[885,691],[414,451],[341,508]]
+  #ROI_DEFAULT: [[131, 307], [605, 148], [941, 249], [885, 691]]
+  ROI_DEFAULT: [[281,256],[540,180],[931,316], [885, 691],[441,465],[543,381]]
+  TRACKING_ROI: [[54, 344], [540,180], [711,246], [810,167], [916,197], [941,249],[885,691],[414,451],[341,508]]
   MOI1: [[731,168],[205,424]]
   MOI2: [[526,566],[842,199]]
   MOI: [[[731,168],[205,424]],[[526,566],[842,199]]]
-  LINE1: [[207, 279], [462, 412]]
-  LINE2: [[748, 214], [937, 278]]
-  LINE: [[[207, 279], [462, 412]], [[748, 214], [937, 278]]]
+
+
+  LINE1: [[367,225], [588,328]]
+  LINE2: [[667,300], [917,401]]
+  LINE: [[[367,225], [588,328]], [[667,300], [917,401]]]
 
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
@@ -18,4 +21,9 @@ CAM:
   MAX_IOU_DISTANCE: 0.85
   MAX_AGE: 3
   N_INIT: 1
-  #THRESHOLD_AREA: 0.4
+  THRESHOLD_AREA: 0.4
+
+  #MOI2 +5 MOi2 +2
+  FRAME_MOI1: 5
+  FRAME_MOI2: 2
+  FRAME_MOI: [5,2]
