--- a/configs/cam5.yaml
+++ b/configs/cam5.yaml
@@ -2,14 +2,15 @@ CAM:
     NAME: "CAM_05"
     NUMBER_MOI: 2
     #ROI_DEFAULT: [[1, 567], [484, 171], [756, 164], [910, 719], [0, 718]]
-    ROI_DEFAULT: [[1, 567], [382,254], [782,246], [862,549]]
+    ROI_DEFAULT: [[1, 567], [295,325], [801,324], [862,549]]
     TRACKING_ROI: [[1, 567], [382,254],[593,253],[617,160],[766,160], [782,246], [862,549],[448,555],[424,720],[3,720]]
     MOI1: [[587,160], [286, 716]]
     MOI2: [[609, 716], [663, 159]]
     MOI: [[[587,160], [286, 716]], [[609, 716], [663, 159]]]
-    LINE1: [[171,427], [506,436]]
-    LINE2: [[557,364], [813,355]]
-    LINE: [[[171,427], [506,436]], [[557,364], [813,355]]]
+
+    LINE1: [[56,514], [502,518]]
+    LINE2: [[823,394],[543,395]]
+    LINE: [[[56,514], [502,518]], [[823,394],[543,395]]]
 
     
   # for kalman filter - kalman_filter.py
@@ -20,6 +21,8 @@ CAM:
     MAX_IOU_DISTANCE: 0.85
     MAX_AGE: 3
     N_INIT: 1
+    THRESHOLD_AREA: 0.25
 
-    #THRESHOLD_AREA: 0.25
-
+    FRAME_MOI1: 4
+    FRAME_MOI2: 22
+    FRAME_MOI: [4,22]
