--- a/configs/cam6.yaml
+++ b/configs/cam6.yaml
@@ -1,15 +1,16 @@
 CAM:
   NAME: "CAM_06"
   NUMBER_MOI: 2
-  #ROI_DEFAULT:[[7,441],[439,150],]
-  ROI_DEFAULT: [[10, 437], [437, 150],[630,170], [826,163], [1223, 464]]
+  #ROI_DEFAULT:[[7,441],[439,150],[812,153],[1225,465]]
+  ROI_DEFAULT: [[7,441],[355,207],[889,211],[1225,465]]
   TRACKING_ROI: [[10, 437], [437, 150],[630,170],[633,133],[781,134], [810, 150], [1223, 464],[631,451],[625,720],[6,720]]
   MOI1: [[549, 144], [297, 505]]
   MOI2: [[925, 487], [715, 144]]
   MOI: [[[549, 144], [297, 505]], [[925, 487], [715, 144]]]
-  LINE1: [[202,310], [626, 324]]
-  LINE2: [[643, 209], [881, 206]]
-  LINE: [[[202,310], [626, 324]], [[643, 209], [881, 206]]]
+
+  LINE1: [[171,427], [506,436]]
+  LINE2: [[823,394],[543,395]]
+  LINE: [[[171,427], [506,436]], [[823,394],[543,395]]]
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
   _STD_WEIGHT_VELOCITY: 100         # inverse of _std_weight_velocity
@@ -17,4 +18,9 @@ CAM:
   MAX_IOU_DISTANCE: 0.85
   MAX_AGE: 3
   N_INIT: 1
-  #THRESHOLD_AREA: 0.30
+  THRESHOLD_AREA: 0.30
+  #MOI2 +11
+  FRAME_MOI1: 0
+  FRAME_MOI2: 11
+  FRAME_MOI: [0,11]
+  
