Khang add Roi BTC

--- a/configs/cam1.yaml
+++ b/configs/cam1.yaml
@@ -1,7 +1,7 @@
 CAM:
   NAME: "CAM_01"
   NUMBER_MOI: 2
-  #ROI_DEFAULT: [[1,341], [150, 210],[963,249],[1278,464], [0,462]]
+  ROI_BTC: [[1,341], [150, 210],[963,249],[1278,464], [0,462]]
   ROI_DEFAULT: [[1,341], [150, 210],[604,229],[609,235],[999,269],[1278,464],[604,461],[607,416], [0,405]]
   TRACKING_ROI: [[2,370], [150, 210],[603,231],[610,200],[941,209], [963, 249], [1278, 464],[592,461],[611,720],[2,720]]
   MOI1: [[347, 210], [196, 548]]
