--- a/configs/cam10.yaml
+++ b/configs/cam10.yaml
@@ -1,6 +1,7 @@
 CAM:
   NAME: "CAM_10"
   NUMBER_MOI: 12
+  ROI_BTC: [[1, 657], [312, 258], [985, 255], [1277, 505], [1279, 660]]
   ROI_DEFAULT: [[1, 657], [312, 258], [985, 255], [1277, 505], [1279, 660]]
   TRACKING_ROI: [[1, 715], [1, 501], [302, 202], [992, 207],[1278, 435], [1276, 715]]
   MOI1: [[491, 244], [355, 678]]
