--- a/configs/cam11.yaml
+++ b/configs/cam11.yaml
@@ -1,7 +1,7 @@
 CAM:
   NAME: "CAM_11"
   NUMBER_MOI: 2
-  #ROI_DEFAULT: [[250, 586], [430, 359], [800, 362], [982, 574]]
+  ROI_BTC: [[250, 586], [430, 359], [800, 362], [982, 574]]
   ROI_DEFAULT: [[278,550], [430, 359], [800, 362],[947,532]]
   TRACKING_ROI: [[250, 586], [430, 359],[600,359],[595,315],[777,310], [800, 362], [982, 574],[814,571],[825,716],[218,720]]
   MOI1: [[542, 349], [471, 622]]
