--- a/configs/cam16.yaml
+++ b/configs/cam16.yaml
@@ -1,6 +1,7 @@
 CAM:
   NAME: "CAM_16"
   NUMBER_MOI: 3
+  ROI_BTC: [[46, 190], [521, 144], [1156, 454], [128, 636]]
   ROI_DEFAULT: [[46, 190], [521, 144], [1156, 454], [128, 636]]
   TRACKING_ROI: [[2, 165], [561, 108], [1278, 371],[1278, 720], [202, 719]]
   MOI1: [[155,166],[596,621]]
