--- a/configs/cam19.yaml
+++ b/configs/cam19.yaml
@@ -1,7 +1,7 @@
 CAM:
   NAME: "CAM_19"
   NUMBER_MOI: 2
-  #ROI_DEFAULT: [[131, 307], [605, 148], [941, 249], [885, 691]]
+  ROI_BTC: [[131, 307], [605, 148], [941, 249], [885, 691]]
   ROI_DEFAULT: [[281,256],[540,180],[931,316], [885, 691],[441,465],[543,381]]
   TRACKING_ROI: [[54, 344], [540,180], [711,246], [810,167], [916,197], [941,249],[885,691],[414,451],[341,508]]
   MOI1: [[731,168],[205,424]]
