--- a/configs/cam4.yaml
+++ b/configs/cam4.yaml
@@ -1,7 +1,7 @@
 CAM:
     NAME: "CAM_04"
     NUMBER_MOI: 2
-    #ROI_DEFAULT: [[1, 567], [484, 171], [756, 164], [910, 719], [0, 718]]
+    ROI_BTC: [[1, 567], [484, 171], [756, 164], [910, 719], [0, 718]]
     ROI_DEFAULT: [[1, 567], [295,325], [801,324], [862,549]]
     TRACKING_ROI: [[1, 567], [382,254],[593,253],[617,160],[766,160], [782,246], [862,549],[448,555],[424,720],[3,720]]
     MOI1: [[587,160], [286, 716]]
