--- a/configs/cam6.yaml
+++ b/configs/cam6.yaml
@@ -1,7 +1,7 @@
 CAM:
   NAME: "CAM_06"
   NUMBER_MOI: 2
-  #ROI_DEFAULT:[[7,441],[439,150],[812,153],[1225,465]]
+  ROI_BTC:[[7,441],[439,150],[812,153],[1225,465]]
   ROI_DEFAULT: [[7,441],[355,207],[889,211],[1225,465]]
   TRACKING_ROI: [[10, 437], [437, 150],[630,170],[633,133],[781,134], [810, 150], [1223, 464],[631,451],[625,720],[6,720]]
   MOI1: [[549, 144], [297, 505]]
