--- a/configs/cam8.yaml
+++ b/configs/cam8.yaml
@@ -2,6 +2,7 @@ CAM:
   NAME: "CAM_08"
   NUMBER_MOI: 2
 
+  ROI_BTC: [[83,390], [322, 218], [968, 224], [1266, 448],[609,445],[612,392]]
   ROI_DEFAULT: [[83,390], [322, 218], [968, 224], [1266, 448],[609,445],[612,392]]
   TRACKING_ROI: [[19, 431], [322, 218],[627,218],[640,150],[930,152], [968, 224], [1266, 448],[623,443],[615,720],[7,720]]
   MOI1: [[491, 197], [308, 478]]
