--- a/configs/cam9.yaml
+++ b/configs/cam9.yaml
@@ -1,7 +1,7 @@
 CAM:
   NAME: "CAM_09"
   NUMBER_MOI: 1
-  #ROI_DEFAULT: [[238, 454], [694, 284], [1156, 306], [1262, 621]]
+  ROI_BTC: [[238, 454], [694, 284], [1156, 306], [1262, 621]]
   ROI_DEFAULT: [[238, 454], [648, 302], [1167, 331], [1262, 621]]
   TRACKING_ROI: [[238, 454], [721, 251], [1160, 278],[1262, 621]]
   MOI1: [[655, 575], [943, 274]]
