--- a/configs/cam13.yaml
+++ b/configs/cam13.yaml
@@ -1,6 +1,7 @@
 CAM:
   NAME: "CAM_13"
   NUMBER_MOI: 2
+  ROI_BTC: [[8, 339], [341, 166], [1008, 169], [1272, 312]]
   ROI_DEFAULT: [[8, 339], [341, 166], [1008, 169], [1272, 312]]
   TRACKING_ROI: [[8, 339], [341, 166],[647,167],[649,120],[963,123], [1008, 169], [1272, 312],[641,328],[632,485],[8,509]]
   MOI1: [[521, 152], [305, 371]]
