--- a/configs/cam2.yaml
+++ b/configs/cam2.yaml
@@ -1,7 +1,7 @@
 CAM:
   NAME: "CAM_02"
   NUMBER_MOI: 2
-  #ROI_DEFAULT: [[1,341], [150, 210],[963,249],[1278,464], [0,462]]
+  ROI_BTC: [[1,341], [150, 210],[963,249],[1278,464], [0,462]]
   ROI_DEFAULT: [[1,370], [150, 210],[607,230],[607,262],[987,264],[1278,464],[604,461],[607,399]]
   TRACKING_ROI: [[2,370], [150, 210],[603,231],[610,180],[941,189], [963, 249], [1278, 464],[592,461],[611,720],[2,720]]
   MOI1: [[347, 210], [196, 548]]
