--- a/configs/cam21.yaml
+++ b/configs/cam21.yaml
@@ -1,7 +1,7 @@
 CAM:
   NAME: "CAM_21"
   NUMBER_MOI: 6
-  #ROI_DEFAULT: [[6, 389], [440, 211], [814, 252], [830, 661]]
+  ROI_BTC: [[6, 389], [440, 211], [814, 252], [830, 661]]
   ROI_DEFAULT: [[6, 389], [440, 211], [814, 252], [830, 661],[185,450],[4,508]]
   TRACKING_ROI: [[2, 242], [456, 150], [819, 189],[842, 716], [437, 716], [1, 720]]
   MOI1: [[602,204],[159,497]]
