--- a/configs/cam24.yaml
+++ b/configs/cam24.yaml
@@ -1,7 +1,7 @@
 CAM:
     NAME: "CAM_24"
     NUMBER_MOI: 2
-    #ROI_DEFAULT: [[207, 418], [803, 283], [1153, 368], [1090, 690]]
+    ROI_BTC: [[207, 418], [803, 283], [1153, 368], [1090, 690]]
     ROI_DEFAULT: [[207, 418], [744,296], [1147, 400], [1090, 690]]
     TRACKING_ROI: [[207, 418], [803, 283],[961,321],[1005,277],[1158,308], [1153, 368], [1090, 690],[583,536],[250,720],[0,720],[2,492]]
     MOI1: [[922, 309], [309, 503]]
